# short_url

./: Cargo.toml  index.html
.github/workflows/: static.yml
gh-pg/: index.html  short_url-df2fd6ce13730f3a.js  short_url-df2fd6ce13730f3a_bg.wasm  short_url-ecf8dbf199c1a566.js  short_url-ecf8dbf199c1a566_bg.wasm
src/: compress.rs  main.rs  smaz_cmp.rs  yt.rs
