[package]
name = "short_url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
num-bigint = "0.4.3"
smaz = "0.1.0"
strum = "0.25.0"
strum_macros = "0.25.1"
sycamore = "0.8.2"
web-sys = {version = "0.3.64", features = ["Url", "Window", "Location", "UrlSearchParams"]}
